// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

// import "github.com/gogo/protobuf/gogoproto/gogo.proto";
// import "google/protobuf/empty.proto";
// import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package demo.service.v1;

option go_package = "api";
// option (gogoproto.goproto_getters_all) = false;


service UserInfo{
    rpc QueryUserInfo(QueryUserReq) returns (QueryUserResp){
        // option (google.api.http) = {
        //     get: "/v1/queryuser{email}"
        // };
    };
}

message QueryUserReq{
    string email = 1;
}

message QueryUserResp{
    int64 id = 1;
    string username = 2;
    string email = 3;
}
